output/logs/test2b1b2_44202665.log
  File "/home/hmiura/hiro/03_Class/05_2022_Fall/alab/code/test2b1b2.py", line 127
    '\nGenerated by: '+progname+
                                ^
SyntaxError: invalid syntax
